update 17 files and create NavBar and Footer

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Event Manager App</title>
+  
   </head>
   <body>
+  <html data-theme="dim"></html>  
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
