--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   </head>
   <body>
-  <html data-theme="dim"></html>  
+  <html data-theme="coffee"></html>  
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
